# GlebTube

./: .env.dev.example  .env.example  .env.prod.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
GlebTube/: Dockerfile  (+5 more)
backend/: .gitattributes  Dockerfile  celery_app.py  main.py  pyproject.toml  requirements.txt  utils.py
backend/GlebTube/: settings.py  urls.py  views.py  wsgi.py
backend/api/: __init__.py  auth.py  filters.py  permissions.py  serializers.py  urls.py  users.py  videos.py  views.py
backend/auths/: admin.py  forms.py  models.py  views.py
backend/auths/migrations/: 0001_initial.py  0002_user_user_embeddings.py  0003_rename_stars_count_user_basestars_and_more.py  0004_user_joinedat.py
backend/core/: __init__.py  config.py  types.py
backend/dependencies/: auth.py
backend/encoder/: config.json
backend/ml/: encode.py  models.py  search.py
backend/models/: __init__.py  fbd.py  mongo.py  users.py  videos.py
backend/nginx/: default.conf
backend/profiles/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
backend/profiles/migrations/: 0001_initial.py  0002_remove_subscription_unique_users_sub_and_more.py
backend/profiles/templates/profile/: profile.html  profile_menu.html
backend/profiles/templates/sub_buttons/: sub.html
backend/profiles/templatetags/: user_filters.py
backend/repositories/: __init__.py  base.py  users.py  videos.py
backend/schemas/: __init__.py  base.py  pagination.py  users.py  videos.py
backend/services/: __init__.py  base.py  jwt_auth.py  users.py  videos.py
backend/static/js/: service-worker.js
backend/templates/: gt_form.html
backend/templates/spinners/: loading_spinner_htmx.html
backend/users/: admin.py  models.py  tasks.py
backend/users/migrations/: 0001_initial.py
backend/users/templates/: login.html  reg.html
backend/videos/: admin.py  apps.py  forms.py  models.py  semantic_match.py  signals.py  tasks.py  tests.py  views.py
backend/videos/migrations/: 0001_initial.py  0002_alter_usercommentrelation_unique_together_and_more.py  0002_rename_date_uploaded_commentvideo_createdat_and_more.py  0003_rename_video_video_src.py  0004_rename_author_commentvideo_channel_and_more.py  0005_remove_video_search_embedding.py  0006_commentvideo_parent.py  0007_commentvideo_basestars.py  0008_rename_instance_commentvideo_video.py  0009_rename_content_commentvideo_text.py
backend/videos/templates/: main.html
backend/videos/templatetags/: video_filters.py
backend/watch/: apps.py  tasks.py  urls.py  views.py
backend/watch/templates/: watch.html
(+264 files in other folders)
