[tool.poetry]
name = "glebtube"
version = "0.0.1"
description = "Videohosting YT copy (non commercial)"
authors = ["JukNavozn1k <deffender1337@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.4"
django = "^4.2.5"
pillow = "^10.0.1"
django-markdownx = "^4.0.5"
django-bleach = "^3.1.0"
social-auth-app-django = "^5.4.1"
djangorestframework = "^3.15.1"
django-debug-toolbar = "^4.4.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
