[tool.poetry]
name = "glebtube"
version = "0.0.1"
description = "Videohosting YT copy (non commercial)"
authors = ["JukNavozn1k <deffender1337@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.4"
django = "^4.2.5"
pillow = "^10.0.1"
social-auth-app-django = "^5.4.1"
django-debug-toolbar = "^4.4.5"
psycopg2-binary = "^2.9.9"
celery = {extras = ["redis"], version = "^5.4.0"}
flower = "^2.0.1"
gunicorn = "^22.0.0"
djangorestframework = "^3.15.2"
coverage = "^7.6.0"
djoser = "^2.2.3"
channels = "^4.1.0"
daphne = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
