[tool.poetry]
name = "glebtube"
version = "0.0.1"
description = "Videohosting YT copy (non commercial)"
authors = ["JukNavozn1k <deffender1337@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.4,<3.14"
django = "^5.2.5"  
pillow = "^10.0.1"
social-auth-app-django = "^5.4.1"
django-debug-toolbar = "^6.0.0"  
psycopg2-binary = "^2.9.10"  
celery = {extras = ["redis"], version = "^5.5.3" } 
flower = "^2.0.1"  
gunicorn = "^23.0.0" 
djangorestframework = "^3.15.2"
coverage = "^7.10.3"  
djoser = "^2.2.3"
channels = "^4.1.0"
daphne = "^4.1.2"
django-filter = "^24.3"
django-cors-headers = "^4.4.0"
scikit-learn = "^1.7.1"
torch = "^2.8.0"
transformers = "^4.55.0"
pandas = "^2.3.1"
numpy = "2.2.6"
drf-spectacular = "^0.28.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
